--- a/templates/index.html
+++ b/templates/index.html
@@ -85,7 +85,7 @@
 
      <a href="{% url 'index'%}" class="logo" style="color: white; font-family: 'Helvetica Neue', Arial, sans-serif; font-size: 1.8rem; font-weight: 900; letter-spacing: 1.5px; text-decoration: none; display: inline-flex; align-items: center; gap: 10px;">
   <i class="bi bi-airplane-fill" style="font-size: 1.4em; transform: rotate(45deg); transition: transform 0.4s ease; color: white; margin-right: 2px;"></i>
-  <span style="font-weight: 900; text-shadow: 0 1px 2px rgba(0,0,0,0.2);">NAIJETS</span>
+  <span style="font-weight: 900; text-shadow: 0 1px 2px rgba(0,0,0,0.2);">NAIROBI JET </span>
 </a>
         <div class="header-btn-group">
 
@@ -174,7 +174,7 @@
        {% if user.is_authenticated %}
             <a href="{% url 'logout' %}" class="btn btn-primary">Logout</a>
         {% else %}
-            <a href="#" class="btn btn-primary">Book Now</a>
+            <a href="#" class="btn btn-primary">Login</a>
         {% endif %}
 
 
@@ -205,7 +205,8 @@
           </p>
 
           <div class="btn-group">
-            <button class="btn btn-primary">Learn more</button>
+            <a href="{% url 'about-us' %}" class="btn btn-primary">Learn more</a>
+
 
             <button id="bookNowButton" class="btn btn-primary">Book Now</button>
           </div>
