updates on abouts-us

--- a/templates/base.html
+++ b/templates/base.html
@@ -116,8 +116,8 @@
             </a>
           </li>
           <li>
-            <a href="{% url 'about-us'%}" class="navbar-link" data-nav-link style="color: #ffffff; text-decoration: none; font-weight: 500; text-transform: uppercase; letter-spacing: 1px; padding: 10px 15px; transition: all 0.2s ease; font-size: 0.9rem;">
-              About us
+            <a href="{% url 'private_jet_charter'%}" class="navbar-link" data-nav-link style="color: #ffffff; text-decoration: none; font-weight: 500; text-transform: uppercase; letter-spacing: 1px; padding: 10px 15px; transition: all 0.2s ease; font-size: 0.9rem;">
+              Private Jet
             </a>
           </li>
           <li>
