--- a/templates/private_jet_charter.html
+++ b/templates/private_jet_charter.html
@@ -147,7 +147,7 @@
 
       <div class="fleet-card">
         <div class="fleet-image">
-          <img src="{% static 'assets/images/citation-xls.jpg' %}" alt="Citation XLS">
+          <img src="{% static 'assets/images/citation-xls.webp' %}" alt="Citation XLS">
           <div class="fleet-specs">
             <span>Citation XLS</span>
             <span>Super Midsize</span>
@@ -221,7 +221,7 @@
         </div>
       </div>
       <div class="amenities-image">
-        <img src="{% static 'assets/images/jet-interior.jpg' %}" alt="Private Jet Interior">
+        <img src="{% static 'assets/images/jet-interior.jpeg' %}" alt="Private Jet Interior">
       </div>
     </div>
   </div>
