--- a/templates/base.html
+++ b/templates/base.html
@@ -121,8 +121,8 @@
             </a>
           </li>
           <li>
-            <a href="{% url 'services'%}" class="navbar-link" data-nav-link style="color: #ffffff; text-decoration: none; font-weight: 500; text-transform: uppercase; letter-spacing: 1px; padding: 10px 15px; transition: all 0.2s ease; font-size: 0.9rem;">
-              Services
+            <a href="{% url 'group_charter'%}" class="navbar-link" data-nav-link style="color: #ffffff; text-decoration: none; font-weight: 500; text-transform: uppercase; letter-spacing: 1px; padding: 10px 15px; transition: all 0.2s ease; font-size: 0.9rem;">
+              Group Charter
             </a>
           </li>
           <li>
