--- a/templates/private_jet_charter.html
+++ b/templates/private_jet_charter.html
@@ -21,7 +21,7 @@
       <h1 class="hero-title">Elite Private Jet Charter</h1>
       <p class="hero-subtitle">Personalized air travel with uncompromising comfort, privacy, and convenience</p>
       <div class="hero-cta">
-        <a href="#jet-services" class="btn btn-primary">Explore Options</a>
+        <a href="#" class="btn btn-primary">Book a flight</a>
         <a href="tel:+254700000000" class="btn btn-outline">
           <i class="bi bi-telephone"></i> +254 700 000000
         </a>
